--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p><mark><bold>page content is under development</bold></mark></p>
-    <a href="/home/index.html">Back</a>
+    <a href="https://knowledge356.github.io/knowledge356/">Back</a>
 </body>
 </html>
